--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,22 +1,94 @@
 <section class="container mx-auto p-4 w-1/2 min-h-[30vh] flex items-center justify-center">
   <div class="p-6 bg-purple-900 rounded-3xl w-full max-w-2xl">
     <div class="mb-7">
-      <h2 class="font-semibold text-2xl text-gray-100 text-center">Cadastre-se</h2>
+      <h2 class="font-semibold text-2xl text-gray-100 text-center">Criar Novo Usuário</h2>
     </div>
-
     <%= render "devise/shared/error_messages", resource: resource %>
-
-    <div class="space-y-6 px-8">
+    <div class="space-y-6 px-8" data-controller="registratiom--login-mask">
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { data: { turbo: false } }) do |f| %>
         <% form_fields = [
-          { field: :first_name, label: "Nome", type: :input },
-          { field: :last_name, label: "Sobrenome", type: :input },
-          { field: :email, label: "E-mail", type: :input, autocomplete: "email" },
-          { field: :phone, label: "Telefone", type: :input },
-          { field: :cpf, label: "CPF", type: :input },
-          { field: :perfil, label: "Perfil", type: :association, collection: Perfil.all, prompt: "Selecione um perfil" },
-          { field: :password, label: "Senha", type: :input, hint: ("Mínimo de #{@minimum_password_length} caracteres" if @minimum_password_length), autocomplete: "new-password" },
-          { field: :password_confirmation, label: "Confirmação de senha", type: :input, autocomplete: "new-password" }
+          { 
+            field: :first_name, 
+            label: "Nome", 
+            type: :input,
+            input_html: { 
+              data: { registratiom__login_mask_target: "input" }
+            }
+          },
+          { 
+            field: :last_name, 
+            label: "Sobrenome", 
+            type: :input,
+            input_html: { 
+              data: { registratiom__login_mask_target: "input" }
+            }
+          },
+          { 
+            field: :email, 
+            label: "E-mail", 
+            type: :input, 
+            autocomplete: "email",
+            input_html: { 
+              data: { registratiom__login_mask_target: "input" }
+            }
+          },
+          { 
+            field: :phone, 
+            label: "Telefone", 
+            type: :input,
+            input_html: { 
+              class: "bg-purple-800 border border-purple-700 text-gray-100 text-sm rounded-lg focus:ring-purple-500 focus:border-purple-500 block w-full p-2.5",
+              data: { 
+                registratiom__login_mask_target: "phone input"
+              }
+            }
+          },
+          { 
+            field: :cpf, 
+            label: "CPF", 
+            type: :input,
+            input_html: { 
+              class: "bg-purple-800 border border-purple-700 text-gray-100 text-sm rounded-lg focus:ring-purple-500 focus:border-purple-500 block w-full p-2.5",
+              data: { 
+                registratiom__login_mask_target: "cpf input"
+              }
+            }
+          },
+          { 
+            field: :perfil, 
+            label: "Perfil", 
+            type: :association, 
+            collection: Perfil.all, 
+            prompt: "Selecione um perfil",
+            input_html: { 
+              class: "bg-purple-800 border border-purple-700 text-gray-100 text-sm rounded-lg focus:ring-purple-500 focus:border-purple-500 block w-full p-2.5",
+              data: { registratiom__login_mask_target: "input" }
+            }
+          },
+          { 
+            field: :password, 
+            label: "Senha", 
+            type: :input, 
+            autocomplete: "new-password",
+            input_html: { 
+              class: "bg-purple-800 border border-purple-700 text-gray-100 text-sm rounded-lg focus:ring-purple-500 focus:border-purple-500 block w-full p-2.5",
+              data: { 
+                registratiom__login_mask_target: "password input"
+              }
+            }
+          },
+          { 
+            field: :password_confirmation, 
+            label: "Confirmação de senha", 
+            type: :input, 
+            autocomplete: "new-password", 
+            input_html: { 
+              class: "bg-purple-800 border border-purple-700 text-gray-100 text-sm rounded-lg focus:ring-purple-500 focus:border-purple-500 block w-full p-2.5",
+              data: { 
+                registratiom__login_mask_target: "password_confirmation input"
+              }
+            }
+          }
         ] %>
 
         <div class="grid grid-cols-2 gap-4">
@@ -25,50 +97,84 @@
               <% if field_config[:type] == :association %>
                 <%= f.association field_config[:field],
                     label: field_config[:label],
-                    required: true,
                     collection: field_config[:collection],
                     prompt: field_config[:prompt],
-                    required_mark: -> {
-                      tag.svg(xmlns: "http://www.w3.org/2000/svg", fill: "none", viewbox: "0 0 24 24", 
-                        stroke_width: "1.5", stroke: "currentColor", class: "w-4 h-4 text-red-500 inline-block ml-1") do
-                        tag.path(stroke_linecap: "round", stroke_linejoin: "round", 
-                          d: "M12 9v3.75m-9.303 3.376c-.866 1.5.217 3.374 1.948 3.374h14.71c1.73 0 2.813-1.874 1.948-3.374L13.949 3.378c-.866-1.5-3.032-1.5-3.898 0L2.697 16.126z")
-                      end
-                    },
-                    input_html: { 
-                      class: "bg-purple-800 border border-purple-700 text-gray-100 text-sm rounded-lg focus:ring-purple-500 focus:border-purple-500 block w-full p-2.5"
-                    },
+                    required: false,
+                    required_mark: "",
+                    input_html: field_config[:input_html],
                     wrapper_html: { class: 'mb-0' },
-                    label_html: { class: "block mb-2 text-sm font-medium text-gray-100" } %>
+                    label_html: { 
+                      class: "block mb-2 text-sm font-medium text-gray-100",
+                      data: { registratiom__login_mask_target: "label" }
+                    } %>
+              <% elsif field_config[:type] == :custom %>
+                <%= field_config[:content] %>
               <% else %>
                 <%= f.input field_config[:field],
                     label: field_config[:label],
-                    required: true,
-                    required_mark: -> {
-                      tag.svg(xmlns: "http://www.w3.org/2000/svg", fill: "none", viewbox: "0 0 24 24", 
-                        stroke_width: "1.5", stroke: "currentColor", class: "w-4 h-4 text-red-500 inline-block ml-1") do
-                        tag.path(stroke_linecap: "round", stroke_linejoin: "round", 
-                          d: "M12 9v3.75m-9.303 3.376c-.866 1.5.217 3.374 1.948 3.374h14.71c1.73 0 2.813-1.874 1.948-3.374L13.949 3.378c-.866-1.5-3.032-1.5-3.898 0L2.697 16.126z")
-                      end
-                    },
+                    required: false,
+                    required_mark: "",
                     input_html: { 
                       class: "bg-purple-800 border border-purple-700 text-gray-100 text-sm rounded-lg focus:ring-purple-500 focus:border-purple-500 block w-full p-2.5",
-                      autocomplete: field_config[:autocomplete]
+                      autocomplete: field_config[:autocomplete],
+                      data: field_config[:input_html][:data]
                     },
                     hint: field_config[:hint],
-                    wrapper_html: { class: 'mb-0' },
-                    label_html: { class: "block mb-2 text-sm font-medium text-gray-100" },
+                    wrapper_html: { class: 'mb-0 relative' },
+                    label_html: { 
+                      class: "block mb-2 text-sm font-medium text-gray-100",
+                      data: { registratiom__login_mask_target: "label" }
+                    },
                     hint_html: { class: "mt-1 text-sm text-gray-300" } %>
               <% end %>
             </div>
           <% end %>
         </div>
 
+        <% if @minimum_password_length %>
+          <div class="password-rules mt-3 mb-2 text-gray-300 text-sm">
+            <div id="length-rule" class="flex items-center space-x-2 transition-all duration-300">
+              <svg class="w-4 h-4 text-red-500" fill="currentColor" viewBox="0 0 20 20">
+                <circle cx="10" cy="10" r="8"/>
+              </svg>
+              <span>Mínimo de <%= @minimum_password_length %> caracteres</span>
+            </div>
+            <div id="uppercase-rule" class="flex items-center space-x-2 transition-all duration-300">
+              <svg class="w-4 h-4 text-red-500" fill="currentColor" viewBox="0 0 20 20">
+                <circle cx="10" cy="10" r="8"/>
+              </svg>
+              <span>Pelo menos uma letra maiúscula</span>
+            </div>
+            <div id="lowercase-rule" class="flex items-center space-x-2 transition-all duration-300">
+              <svg class="w-4 h-4 text-red-500" fill="currentColor" viewBox="0 0 20 20">
+                <circle cx="10" cy="10" r="8"/>
+              </svg>
+              <span>Pelo menos uma letra minúscula</span>
+            </div>
+            <div id="number-rule" class="flex items-center space-x-2 transition-all duration-300">
+              <svg class="w-4 h-4 text-red-500" fill="currentColor" viewBox="0 0 20 20">
+                <circle cx="10" cy="10" r="8"/>
+              </svg>
+              <span>Pelo menos um número</span>
+            </div>
+            <div id="special-rule" class="flex items-center space-x-2 transition-all duration-300">
+              <svg class="w-4 h-4 text-red-500" fill="currentColor" viewBox="0 0 20 20">
+                <circle cx="10" cy="10" r="8"/>
+              </svg>
+              <span>Pelo menos um caractere especial</span>
+            </div>
+          </div>
+        <% end %>
+
+        <div class="h-2 bg-gray-700 rounded-full mt-2">
+          <div data-registratiom--login-mask-target="strengthMeter" class="h-2"></div>
+        </div>
+
         <div class="mt-7">
           <%= f.button :submit, "Cadastrar", class: "w-full flex justify-center bg-purple-800 hover:bg-purple-700 text-gray-100 p-3 rounded-lg tracking-wide font-semibold cursor-pointer transition ease-in duration-500" %>
         </div>
       <% end %>
-
+      
       <div class="mt-7 text-sm text-center text-gray-100">
         <%= render "devise/shared/links" %>
       </div>
