--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -10,7 +10,7 @@
         </svg>
       </div>
       </figure>
-      <h1 class="text-xl font-bold text-white tracking-wide ml-3 font-medium whitespace-nowrap group-hover/title:text-gray-800 transition-colors duration-300 sidebar-inactive:hidden" data-sidebar-target="title">GeniusDI 360°</h1>
+      <h1 class="text-xl font-bold text-white tracking-wide ml-3  whitespace-nowrap group-hover/title:text-gray-800 transition-colors duration-300 sidebar-inactive:hidden" data-sidebar-target="title">GeniusDI 360°</h1>
     <% end %>
   </header>
 
