--- a/app/views/admin/pages/proposta.html.erb
+++ b/app/views/admin/pages/proposta.html.erb
@@ -9,7 +9,7 @@
           title: "Consulta de beneficiários",
           description: "Acesse propostas, filtre por status e visualize detalhes completos.",
           icon: '<path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="m21 21-3.5-3.5M17 10a7 7 0 1 1-14 0 7 7 0 0 1 14 0Z"/>',
-          path: "/admin/propostas/selecionar_consulta"
+          path: consulta_servidor_admin_propostas_path
         },
         {
           title: "Novo Cadastro",
