--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,25 +1,37 @@
-<%- if controller_name != 'sessions' %>
-  <%= link_to "faça seu Login", new_session_path(resource_name) %><br />
-<% end %>
-
-<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Crie seu cadastro", new_registration_path(resource_name) %><br />
-<% end %>
-
-<%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "Esqueceu sua senha?", new_password_path(resource_name) %><br />
-<% end %>
-
-<%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
-  <%= link_to "Não recebeu as instruções de confirmação?", new_confirmation_path(resource_name) %><br />
-<% end %>
-
-<%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
-  <%= link_to "Não recebeu as instruções de desbloqueio?", new_unlock_path(resource_name) %><br />
-<% end %>
-
-<%- if devise_mapping.omniauthable? %>
-  <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= button_to "Entrar com #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), data: { turbo: false } %><br />
+<div class="mb-3 ml-3 mr-3 mt-1">
+  <%- if controller_name != 'sessions' %>
+    <%= link_to "faça seu Login", new_session_path(resource_name) %><br />
   <% end %>
-<% end %>
+</div>
+
+<div class="mb-3 ml-3 mr-3 mt-1">
+  <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+    <%= link_to "Crie seu cadastro", new_registration_path(resource_name) %><br />
+  <% end %>
+</div>
+
+<div class="mb-3 ml-3 mr-3 mt-1">
+  <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
+    <%= link_to "Esqueceu sua senha?", new_password_path(resource_name) %><br />
+  <% end %>
+</div>
+
+<div class="mb-3 ml-3 mr-3 mt-1">
+  <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
+    <%= link_to "Não recebeu as instruções de confirmação?", new_confirmation_path(resource_name) %><br />
+  <% end %>
+</div>
+
+<div class="mb-3 ml-3 mr-3 mt-1">
+  <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
+    <%= link_to "Não recebeu as instruções de desbloqueio?", new_unlock_path(resource_name) %><br />
+  <% end %>
+</div>
+
+<div class="mb-3 ml-3 mr-3 mt-1">
+  <%- if devise_mapping.omniauthable? %>
+    <%- resource_class.omniauth_providers.each do |provider| %>
+      <%= button_to "Entrar com #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), data: { turbo: false } %><br />
+    <% end %>
+  <% end %>
+</div>
