--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -6,7 +6,7 @@
 
     <!-- Botão Mobile -->
     <button type="button" 
-            class="inline-flex md:!hidden items-center p-2 w-10 h-10 justify-center text-sm text-white rounded-lg hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-purple-300" 
+            class="inline-flex md:!hidden items-center p-2 w-10 h-10 justify-center text-sm text-white rounded-lg hoverbg-purple-700 focus:outline-none focus:ring-2 focus:ring-purple-300" 
             data-action="mobile-nav#toggleMenu"
             aria-controls="mobile-menu" 
             aria-expanded="false">
@@ -30,10 +30,10 @@
           <%# Botão do Dropdown %>
           <button type="button"
           data-action="click->dropdown#toggle" 
-          class="flex items-center gap-2 py-2 px-4 text-white hover:bg-purple-700 rounded-lg transition-colors duration-200">
+          class="flex items-center gap-2 py-2 px-4 text-white  rounded-lg transition-colors duration-200">
         <%# Avatar %>
         <% if current_user.avatar.present? %>
-          <img class="w-8 h-8 rounded-full" src="<%= current_user.avatar %>" alt="<%= current_user.name %>'s avatar">
+          <img class="w-8 h-8 rounded-full" src="<%= current_user.avatar %>" alt="<%= current_user.first_name %>'s avatar">
         <% else %>  
           <div class="relative w-8 h-8 overflow-hidden bg-purple-900 rounded-full">
             <svg class="absolute w-8 h-8 text-gray-400" fill="currentColor" viewBox="0 0 20 20">
@@ -71,7 +71,7 @@
         <% if user_signed_in? %>
           <li class="relative" data-controller="dropdown">
             <div class="px-4 py-3 text-white border-t border-purple-300/20 mt-2">
-              <div class="font-medium"><%= current_user.name %></div>
+              <div class="font-medium"><%= current_user.first_name.presence || current_user.email %></div>
               <div class="text-sm truncate"><%= current_user.email %></div>
               <button type="button"
                   data-action="click->dropdown#toggle" 
