--- a/app/views/shared/_nav_menu.html.erb
+++ b/app/views/shared/_nav_menu.html.erb
@@ -38,8 +38,7 @@
       <% menu_items[:flowbite].each do |item| %>
         <%= link_to item[:path], 
             class: "block py-2 px-3 md:px-4 text-white rounded-lg
-                   transition-all duration-200 ease-in-out
-                   hover:bg-purple-600/90 hover:scale-105 hover:shadow-lg
+                   transition-all duration-200 hover:scale-105
                    text-center font-medium text-base md:text-lg
                    whitespace-nowrap shrink-0" do %>
           <%= item[:title] %>
@@ -48,7 +47,7 @@
     </div>
   <% end %>
 <% else %>
-  <ul class="<%= mobile ? 'flex flex-col gap-2 p-2' : 'flex gap-4 p-2 overflow-x-auto max-w-screen-xl mx-auto' %>">
+  <ul class="<%= mobile ? 'flex flex-col p-2' : 'flex gap-4 p-2 overflow-x-auto max-w-screen-xl mx-auto' %>">
     <% menu_items[:standard].each do |link| %>
       <li class="shrink-0">
         <%= link_to link[:path], 
