--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,18 +1,42 @@
-<h2>Forgot your password?</h2>
+<section class="container mx-auto p-4 w-auto min-h-[30vh] flex items-center justify-center">
+  <div class="p-4 bg-purple-900 rounded-3xl w-full max-w-md">
+    <div class="mb-5">
+      <h2 class="font-semibold text-2xl text-gray-100 text-center">Recuperar sua senha</h2>
+    </div>
+    <%= render "devise/shared/error_messages", resource: resource %>
+    <div class="space-y-4 px-4" data-controller="registratiom--login-mask">
+      <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, data: { turbo: false } }) do |f| %>
+        <%= f.error_notification %>
 
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.error_notification %>
+        <div class="grid grid-cols-1 gap-3">
+          <div class="mb-4">
+            <%= f.input :email,
+                      label: "E-mail",
+                      required: false,
+                      required_mark: "",
+                      autofocus: true,
+                      input_html: { 
+                        class: "bg-purple-800 border border-purple-700 text-gray-100 text-sm rounded-lg focus:ring-purple-500 focus:border-purple-500 block w-full p-2.5",
+                        autocomplete: "email",
+                        data: { 
+                          registratiom__login_mask_target: "input"
+                        }
+                      },
+                      wrapper_html: { class: 'mb-0 relative' },
+                      label_html: { 
+                        class: "block mb-2 text-sm font-medium text-gray-100",
+                        data: { registratiom__login_mask_target: "label" }
+                      } %>
+          </div>
+        </div>
 
-  <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" } %>
+        <div class="mt-5">
+          <%= f.button :submit, "Enviar instruções de recuperação", class: "w-full flex justify-center bg-purple-800 hover:bg-purple-700 text-gray-100 p-3 rounded-lg tracking-wide font-semibold" %>
+        </div>
+      <% end %>
+    </div>
+    <div class="flex justify-center mt-4 text-center">
+      <%= render "devise/shared/links" %>
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</section>
