--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -13,10 +13,15 @@
      }.to_json %>">
     <div class="grid grid-cols-1 gap-4">
       <div class="flex gap-4">
-        <%= render "admin/dashboard/partials/propostas", today_clients_count: @today_clients_count %>
         <%= render "admin/dashboard/partials/vendas" %>
       </div>
+    </div>
+        <%= render "admin/dashboard/partials/propostas", today_clients_count: @today_clients_count %>
       <%= render "admin/dashboard/partials/status" %>
+    <div class="bg-gray-800 p-4 rounded-lg shadow-lg">
+      <h2 class="text-xl font-bold mb-4">Estatísticas Mensais</h2>
+      <!-- Elemento específico para o gráfico -->
+      <div data-dashboard-target="chart" class="h-80 w-full"></div>
     </div>
     <%= render "admin/dashboard/partials/status_do_sistema" %>
   </section>
