--- a/app/views/admin/pages/proposta.html.erb
+++ b/app/views/admin/pages/proposta.html.erb
@@ -2,14 +2,13 @@
   <h2 class="mb-8 text-white text-center font-bold text-2xl">Gerenciamento de Propostas</h2>
   
   <div class="container mx-auto px-4">
-    <div class="grid grid-cols-4 sm:grid-cols-2 lg:grid-cols-4 gap-6 max-w-6xl mx-auto">
-      <!-- Card base class para reutilização -->
+    <div class="grid grid-cols-2 sm:grid-cols-2 lg:grid-cols-4 gap-6 ml-6 mr-6 p-8 max-w-6xl mx-auto">
       <% cards = [
         {
           title: "Consulta de beneficiários",
           description: "Acesse propostas, filtre por status e visualize detalhes completos.",
           icon: '<path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="m21 21-3.5-3.5M17 10a7 7 0 1 1-14 0 7 7 0 0 1 14 0Z"/>',
-          path: consulta_servidor_admin_propostas_path
+          path: consulta_beneficios_admin_propostas_path
         },
         {
           title: "Novo Cadastro",
